# orca

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  UNIT_TESTING_PROGRESS.md  tasks.md
src/crates/aco/: Cargo.toml  DEPLOYMENT.md  TUI_GUIDE.md
src/crates/aco/benches/: tui_benchmarks.rs
src/crates/aco/src/: auth.rs  client.rs  error.rs  lib.rs  main.rs  server.rs  session.rs  tui.rs  version.rs
src/crates/aco/src/cli/: handlers.rs  mod.rs  output.rs  status.rs  workflow.rs
src/crates/aco/src/config/: init.rs  loader.rs  mod.rs  schema.rs
src/crates/aco/src/tui/: app.rs  events.rs  grpc_client.rs  mod.rs  ui.rs
src/crates/aco/src/workspace/: initializer.rs  mod.rs  security.rs
src/crates/aco/tests/: auth.rs  cli.rs  client.rs  handlers.rs  tui_integration.rs  workflow.rs  workspace_initialization_tests.rs
src/crates/langgraph-checkpoint/: Cargo.toml
src/crates/langgraph-checkpoint/benches/: checkpoint_bench.rs
src/crates/langgraph-checkpoint/examples/: custom_backend.rs
src/crates/langgraph-checkpoint/src/: channels.rs  channels_ext.rs  channels_extended.rs  checkpoint.rs  error.rs  lib.rs  memory.rs  serializer.rs  traits.rs
src/crates/langgraph-cli/: Cargo.toml
src/crates/langgraph-cli/src/: main.rs
src/crates/langgraph-cli/tests/: cli_tests.rs
src/crates/langgraph-core/: Cargo.toml
src/crates/langgraph-core/benches/: graph_execution_bench.rs
src/crates/langgraph-core/examples/: command_send_usage.rs  conditional_routing.rs  inline_interrupt_demo.rs  parent_child_demo.rs  runtime_context.rs  simple_graph.rs  tool_execution.rs
src/crates/langgraph-core/src/: builder.rs  cache.rs  command.rs  compiled.rs.backup  compiled_enhanced.rs  error.rs  functional.rs  graph.rs  inline_interrupt.rs  interrupt.rs  lib.rs  llm_stream.rs  managed.rs  message_graph.rs  messages.rs  node_result.rs  parent_child.rs  prebuilt.rs  prebuilt_backup.rs  retry.rs  runtime.rs  send.rs  state.rs  state_filter.rs  store.rs  stream.rs  subgraph.rs  tool.rs  visualization.rs  yaml.rs
src/crates/langgraph-core/src/compiled/: composition.rs  execution.rs  graph.rs  introspection.rs  mod.rs  pregel_builder.rs  state.rs  streaming.rs  tests.rs  types.rs
src/crates/langgraph-core/src/llm/: config.rs  mod.rs  response.rs  tools.rs  traits.rs
src/crates/langgraph-core/src/pregel/: algo.rs  channel.rs  checkpoint.rs  executor.rs  io.rs  loop_impl.rs  loop_impl.rs.bak  mod.rs  types.rs
src/crates/langgraph-core/tests/: integration_tests.rs  tool_execution_tests.rs
src/crates/langgraph-prebuilt/: Cargo.toml
src/crates/langgraph-prebuilt/src/: error.rs  lib.rs  messages.rs  tool_node.rs
src/crates/langgraph-prebuilt/src/agents/: mod.rs  plan_execute.rs  react.rs  reflection.rs
src/crates/langgraph-prebuilt/src/tools/: mod.rs  validation.rs
src/crates/llm/: Cargo.toml  PROVIDER_UTILS.md  README.md
src/crates/llm/src/: config.rs  error.rs  lib.rs  provider_macros.rs  provider_utils.rs
src/crates/llm/src/local/: llama_cpp.rs  lmstudio.rs  mod.rs  ollama.rs
src/crates/llm/src/remote/: claude.rs  deepseek.rs  gemini.rs  grok.rs  mod.rs  openai.rs  openrouter.rs
src/crates/orca/: Cargo.toml  DUAL_DATABASE_ARCHITECTURE.md  README.md  TESTING.md  build.rs
src/crates/orca/migrations/: 20250112000001_initial_schema.sql  20251117000002_add_budget_system.sql
src/crates/orca/migrations/project/: 20250115000001_project_schema.sql
src/crates/orca/migrations/user/: 20250115000001_user_schema.sql  20251117000001_add_budget_system.sql
src/crates/orca/src/: config.rs  db.rs  error.rs  events.rs  health.rs  init.rs  interpreter.rs  lib.rs  models.rs  pattern.rs  router.rs  shutdown.rs  version.rs  workflow.rs
src/crates/orca/src/cli/: budget.rs  bug.rs  config.rs  helpers.rs  llm_profile.rs  mod.rs  rule.rs  task.rs  workflow.rs
src/crates/orca/src/config/: loader.rs  schema.rs
src/crates/orca/src/context/: execution_context.rs  mod.rs  session_info.rs
src/crates/orca/src/db/: manager.rs
src/crates/orca/src/executor/: adapter.rs  budget_tracked_llm.rs  llm_provider.rs  mod.rs  multi_llm_provider.rs  retry.rs  task_executor.rs
src/crates/orca/src/models/: ast_cache.rs  budget.rs  bug.rs  llm_profile.rs  llm_provider.rs  mod.rs  pricing.rs  (+4 more)
src/crates/orca/tests/: budget_enforcement_tests.rs  budget_integration_tests.rs  concurrency_tests.rs  llm_profile_integration_tests.rs  pricing_integration_tests.rs  repository_tests.rs  retry_tests.rs  timeout_tests.rs
src/crates/orchestrator/: Cargo.toml  MIGRATIONS_TEST_REPORT.md  P7_MIGRATION_SUMMARY.md  build.rs  executor_config.example.yaml
src/crates/orchestrator/migrations/: 20250115010000_create_tasks.down.sql  20250115010000_create_tasks.up.sql  20250115010100_create_workflows.down.sql  20250115010100_create_workflows.up.sql  20250115010200_create_workflow_tasks.down.sql  20250115010200_create_workflow_tasks.up.sql  20250115010300_create_tool_executions.down.sql  20250115010300_create_tool_executions.up.sql  20250115010400_create_sessions.down.sql  20250115010400_create_sessions.up.sql  20250115010500_create_configurations.down.sql  20250115010500_create_configurations.up.sql  20250115010600_create_triggers.down.sql  20250115010600_create_triggers.up.sql  20250115010700_create_bugs.down.sql  20250115010700_create_bugs.up.sql  20250115010800_create_prompt_history.down.sql  20250115010800_create_prompt_history.up.sql  20250115010900_create_checkpoints.down.sql  20250115010900_create_checkpoints.up.sql  README.md
src/crates/orchestrator/src/: lib.rs  proto.rs  proto_conv.rs  version.rs
src/crates/orchestrator/tests/: auth_service.rs  context_manager_tests.rs  execution_streaming.rs  llm_executor_tests.rs  pattern_selection_tests.rs  task_execution_engine.rs  task_service.rs  workflow_execution_engine.rs  workflow_service.rs  workflow_streaming.rs
src/crates/rtoon/: Cargo.toml
src/crates/rtoon/src/: constants.rs  lib.rs  types.rs
src/crates/tooling/: Cargo.toml  README.md
src/crates/tooling/src/: lib.rs
src/crates/utils/: Cargo.toml  README.md
src/crates/utils/src/: error.rs  lib.rs
(+506 files in other folders)
