[workspace]
members = [
    "src/crates/aco",
    "src/crates/orca",
    "src/crates/orchestrator",
    "src/crates/langgraph-core",
    "src/crates/langgraph-checkpoint",
    "src/crates/langgraph-prebuilt",
    "src/crates/langgraph-cli",
    "src/crates/llm",
    "src/crates/tooling",
    "src/crates/utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["acolib contributors"]
license = "MIT"
repository = "https://github.com/anthropics/acolib"
homepage = "https://github.com/anthropics/acolib"
keywords = ["ai", "agents", "workflows", "orchestration", "langgraph"]
categories = ["development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.23" }
async-trait = "0.1"
futures = "0.3"

# gRPC
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rand = "0.8"

# Logging
tracing = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# Web/HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1.0"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
bincode = "1.3"
jsonschema = "0.17"

# Async utilities
async-stream = "0.3"

# TLS/SSL
rcgen = "0.11"

# TUI
ratatui = "0.28"
crossterm = "0.28"
parking_lot = "0.12"

# Workspace crates (path dependencies)
tooling = { path = "src/crates/tooling" }
llm = { path = "src/crates/llm" }
langgraph-core = { path = "src/crates/langgraph-core" }
langgraph-checkpoint = { path = "src/crates/langgraph-checkpoint" }
langgraph-prebuilt = { path = "src/crates/langgraph-prebuilt" }
langgraph-cli = { path = "src/crates/langgraph-cli" }
utils = { path = "src/crates/utils" }
domain = { path = "src/crates/utils" }  # alias for utils

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
