[package]
name = "aco"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "aco client application for tool execution"

[[bin]]
name = "aco"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
clap = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rpassword = "7.3"
dirs = "5.0"

# TUI
ratatui = "0.25"
crossterm = "0.27"

# gRPC
tonic = { workspace = true }

# Internal workspace dependencies
tooling = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.10"

