[package]
name = "langgraph-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for rLangGraph development"

[[bin]]
name = "langgraph"
path = "src/main.rs"

[dependencies]
langgraph-checkpoint = { workspace = true }
langgraph-core = { workspace = true }
langgraph-prebuilt = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
