[package]
name = "rtoon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TOON format serialization library - a human-readable data format"
keywords = ["toon", "serialization", "format", "json", "config"]
categories = ["encoding", "config", "parser-implementations"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
